Fix visual misalignment with smaller screen sizes

--- a/css/index.css
+++ b/css/index.css
@@ -108,6 +108,11 @@ h1, h2, #pomodoroTimerText, p {
     font-size: 1.2em;
   }
 
+  header img {
+    width: 80px;
+    height: 80px;
+  }
+
   .pomodoroTimers {
     width: 100%;
     height: 200px;
@@ -135,13 +140,8 @@ h1, h2, #pomodoroTimerText, p {
     width: 80%;
   }
 
-  header img {
-    width: 80px;
-    height: 80px;
-  }
-
   header h1 {
-    font-size: 1.5em;
+    font-size: 1.4em;
   }
 
   .leftTimer {
@@ -155,7 +155,7 @@ h1, h2, #pomodoroTimerText, p {
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   .container {
     width: 90%;
     font-size: 1em;
